Updated rendering engine
replaced primer with P5.JS for better cross browser support and updating
to a modern rendering library.

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
 
     <script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/primer.js"></script>
 	<script src="js/FileSaver.min.js"></script>
 
-	<script src="js/drawing.js"></script>
-	<script src="js/audiodisplay.js"></script>
 	<script src="js/recorderjs/recorder.js"></script>
 	<script src="js/main.js"></script>
+
+  <script language="javascript" type="text/javascript" src="js/p5libs/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="js/p5libs/p5.dom.js"></script>
+  <script language="javascript" type="text/javascript" src="js/p5/cellgrid.js"></script>
 	
 	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css">
@@ -53,7 +54,8 @@
                         <textarea class="form-control" rows="4" id="txtIntent" readonly="readonly"></textarea>                    </div>
                 </div>
                 <div class="col-xs-6" style="display: block; float: none; width: 100%; padding-left: 50px; padding-right: 50px; vertical-align: middle">
-                    <div id="primer" style="width: 400px; display: block; margin: auto; height:400px; overflow: hidden"></div>
+                    <div id="primer" style="width: 400px; display: block; margin: auto; height:400px; overflow: hidden">
+                    </div>
                 </div>
             </div>
         </div>
